--- a/packages/frontend/static/main.html
+++ b/packages/frontend/static/main.html
@@ -27,7 +27,7 @@
     <link rel="stylesheet" href="./main.css" />
     <link rel="stylesheet" href="./bundle.css" />
     <link rel="stylesheet" href="./fallback-theme.css" />
-    <title>Delta Chat</title>
+    <title>DeltEcho</title>
     <style id="theme-vars"></style>
   </head>
   <body>
