--- a/packages/frontend/static/main.html
+++ b/packages/frontend/static/main.html
@@ -21,7 +21,7 @@
                    child-src blob: ;
                    img-src 'self' data: blob: file: webxdc-icon: ;
                    media-src 'self' file: ;
-                   connect-src 'self'"
+                   connect-src 'self' https://api.openai.com https://api.anthropic.com https://generativelanguage.googleapis.com http://localhost:* https://localhost:*"
     />
     <link rel="stylesheet" href="./fonts/fonts.css" />
     <link rel="stylesheet" href="./main.css" />
